corrected the spacing for cards. Added cards colors.

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -7,9 +7,11 @@
   box-shadow: 2px 2px 20px 10px rgba(0, 0, 0, 0.4);
 }
 
-body{
+body {
   padding: 2rem;
+  background: var(--background-color);
 }
+
 
 #greeting {
   font-size: 32px;
